--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template</title>
+    <title>Infinity Scroll</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="icon"
-      type="image/png"
-      href="https://www.google.com/s2/u/0/favicons?domain=georgiecodes.com
-"
-    />
-    <link
+      href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <link rel="icon" type="image/png" href="images/gc-favicon1.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <i class="fa-brands fa-amazon"></i>
+    <!-- Title -->
+    <h1>Unsplash API - Infinite Scroll</h1> 
+
+    <!-- Loader -->
+    <div class="loader" id="loader">
+      <img src="images/loader.svg" alt="loading">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
