--- a/index.html
+++ b/index.html
@@ -16,11 +16,30 @@
   </head>
   <body>
     <!-- Title -->
-    <h1>Unsplash API - Infinite Scroll</h1> 
+    <h1>Unsplash API - Infinite Scroll</h1>
 
     <!-- Loader -->
     <div class="loader" id="loader" hidden>
-      <img src="images/loader.svg" alt="loading">
+      <img src="images/loader.svg" alt="loading" />
+    </div>
+    <!-- Immage container -->
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+        alt=""
+      />
     </div>
     <!-- Script -->
     <script src="script.js"></script>
