--- a/index.html
+++ b/index.html
@@ -23,24 +23,7 @@
       <img src="images/loader.svg" alt="loading" />
     </div>
     <!-- Immage container -->
-    <div class="image-container" id="image-container">
-      <img
-        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1552838671-4c793a745d03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-        alt=""
-      />
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
