--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Unsplash API - Infinite Scroll</h1>
 
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
       <img src="images/loader.svg" alt="loading" />
     </div>
     <!-- Immage container -->
